--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DB_CNN=mongodb+srv://mern_user:Y2RAtr6BFMiz8TGD@cluster1.4mtjqzm.mongodb.net/mern_calendar
+DB_CNN=mongodb+srv://mern_user:fKvnAHvDYQiB3QRy@cluster1.4mtjqzm.mongodb.net/mern_calendar
 SECRET_JWT_SEED=vsdfSDfv32Fvasd32fsaij8934sdafvADFrtZxcxz
